# microservices

./: .env  .gitignore  Cargo.toml  config.toml  default.nix  flake.nix  readme.md
api-docs/: open-api.json
db/: schema.sql
src/: lib.rs  main.rs  routes.rs  state.rs  test.rs  token.rs
