[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
dotenv = "*"

[dependencies]
axum = "0.7.7"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "sync"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
