[package]
name = "auth"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.7.7"
chrono = "0.4.38"
dotenv = "0.15.0"
http-body-util = "0.1.2"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "sync"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
utoipa = "5.2.0"
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }

